// Copyright 2020 The PipeCD Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pipe.api.service.pipedservice;
option go_package = "github.com/pipe-cd/pipe/pkg/app/api/service/pipedservice";

import "validate/validate.proto";
import "google/protobuf/wrappers.proto";
import "pkg/model/command.proto";
import "pkg/model/application.proto";
import "pkg/model/application_live_state.proto";
import "pkg/model/deployment.proto";
import "pkg/model/logblock.proto";
import "pkg/model/piped.proto";
import "pkg/model/piped_stats.proto";

// PipedService contains all RPC definitions for piped.
// All of these RPCs are only called by piped and authenticated by using PIPED_TOKEN.
service PipedService {
    // Ping is periodically sent to report its realtime status/stats to control-plane.
    // The received stats will be written to the cache immediately.
    rpc Ping(PingRequest) returns (PingResponse) {}

    // ReportPipedMeta is sent while starting up to report its metadata
    // such as configured cloud providers.
    rpc ReportPipedMeta(ReportPipedMetaRequest) returns (ReportPipedMetaResponse) {}

    // ListApplications returns a list of registered applications
    // that should be managed by the requested piped.
    // Disabled applications should not be included in the response.
    // Piped uses this RPC to fetch and sync the application configuration into its local database.
    rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse) {}

    // ReportApplicationSyncState is used to update the sync status of an application.
    rpc ReportApplicationSyncState(ReportApplicationSyncStateRequest) returns (ReportApplicationSyncStateResponse) {}

    // ReportApplicationMostRecentDeployment is used to update the basic information about
    // the most recent deployment of a specific application.
    rpc ReportApplicationMostRecentDeployment(ReportApplicationMostRecentDeploymentRequest) returns (ReportApplicationMostRecentDeploymentResponse) {}

    // GetApplicationMostRecentDeployment returns the most recent deployment of the given application.
    rpc GetApplicationMostRecentDeployment(GetApplicationMostRecentDeploymentRequest) returns (GetApplicationMostRecentDeploymentResponse) {}

    // ListNotCompletedDeployments returns a list of not completed deployments
    // which are managed by this piped.
    // DeploymentController component uses this RPC to spawns/syncs its local deployment executors.
    rpc ListNotCompletedDeployments(ListNotCompletedDeploymentsRequest) returns (ListNotCompletedDeploymentsResponse) {}

    // CreateDeployment creates/triggers a new deployment for an application
    // that is managed by this piped.
    // This will be used by DeploymentTrigger component.
    rpc CreateDeployment(CreateDeploymentRequest) returns (CreateDeploymentResponse) {}

    // ReportDeploymentPlanned is used to update the status
    // of a specific deployment to PLANNED.
    rpc ReportDeploymentPlanned(ReportDeploymentPlannedRequest) returns (ReportDeploymentPlannedResponse) {}

    // ReportDeploymentStatusChanged is used to update the status
    // of a specific deployment to RUNNING or ROLLING_BACK.
    rpc ReportDeploymentStatusChanged(ReportDeploymentStatusChangedRequest) returns (ReportDeploymentStatusChangedResponse) {}

    // ReportDeploymentCompleted is used to update the status
    // of a specific deployment to SUCCESS | FAILURE | CANCELLED.
    rpc ReportDeploymentCompleted(ReportDeploymentCompletedRequest) returns (ReportDeploymentCompletedResponse) {}

    // SaveDeploymentMetadata is used to persist the metadata of a specific deployment.
    rpc SaveDeploymentMetadata(SaveDeploymentMetadataRequest) returns (SaveDeploymentMetadataResponse) {}

    // SaveStageMetadata is used to persist the metadata
    // of a specific stage of a deployment.
    rpc SaveStageMetadata(SaveStageMetadataRequest) returns (SaveStageMetadataResponse) {}

    // ReportStageLogs is used to save the log of a pipeline stage.
    rpc ReportStageLogs(ReportStageLogsRequest) returns (ReportStageLogsResponse) {}

    // ReportStageLogsFromLastCheckpoint is used to save the full logs from the most recently saved point.
    rpc ReportStageLogsFromLastCheckpoint(ReportStageLogsFromLastCheckpointRequest) returns (ReportStageLogsFromLastCheckpointResponse) {}

    // ReportStageStatusChanged is used to update the status
    // of a specific stage of a deployment.
    rpc ReportStageStatusChanged(ReportStageStatusChangedRequest) returns (ReportStageStatusChangedResponse) {}

    // ListUnhandledCommands is periodically called to obtain the commands
    // that should be handled.
    // Whenever an user makes an interaction from WebUI (cancel/approve/sync)
    // a new command with a unique identifier will be generated an saved into the datastore.
    // Piped uses this RPC to list all still-not-handled commands to handle them,
    // then report back the result to server.
    // On other side, the web will periodically check the command status and feedback the result to user.
    // In the future, we may need a solution to remove all old-handled commands from datastore for space.
    rpc ListUnhandledCommands(ListUnhandledCommandsRequest) returns (ListUnhandledCommandsResponse) {}

    // ReportCommandHandled is called to mark a specific command as handled.
    // The request payload will contain the handle status as well as any additional result data.
    // The handle result should be updated to both datastore and cache (for reading from web).
    rpc ReportCommandHandled(ReportCommandHandledRequest) returns (ReportCommandHandledResponse) {}

    // ReportApplicationLiveState is periodically sent to correct full state of an application.
    // For kubernetes application, this contains a full tree of its kubernetes resources.
    // The tree data should be written into filestore immediately and then the state in cache should be refreshsed too.
    rpc ReportApplicationLiveState(ReportApplicationLiveStateRequest) returns (ReportApplicationLiveStateResponse) {}

    // ReportApplicationLiveStateEvents is sent to submit one or multiple events
    // about the changes of application live state.
    // Control plane uses the received events to update the state of application-resource-tree.
    // We want to start by a simple solution at this initial stage of development,
    // so the API server just handles as below:
    // - loads the releated application-resource-tree from the cache
    // - checks and builds new state for the application-resource-tree
    // - updates new state into cache (cache data is for reading while handling web requests)
    // In the future, we may want to redesign the behavior of this RPC by using pubsub/queue pattern.
    // After receiving the events, all of them will be published into a queue immediately,
    // and then another Handler service will pick them inorder to apply to build new state.
    // By that way we can control the traffic to the datastore in a better way.
    rpc ReportApplicationLiveStateEvents(ReportApplicationLiveStateEventsRequest) returns (ReportApplicationLiveStateEventsResponse) {}
}

message PingRequest {
    pipe.model.PipedStats piped_stats = 1 [(validate.rules).message.required = true];
}

message PingResponse {
    int64 ping_interval = 1;
}

message ReportPipedMetaRequest {
    string version = 1;
    repeated pipe.model.Piped.CloudProvider cloud_providers = 2;
    repeated string repository_ids = 3;
}

message ReportPipedMetaResponse {
}

message ListApplicationsRequest {
}

message ListApplicationsResponse {
    repeated pipe.model.Application applications = 1;
}

message ReportApplicationSyncStateRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.ApplicationSyncState state = 2 [(validate.rules).message.required = true];
}

message ReportApplicationSyncStateResponse {
}

message ReportApplicationMostRecentDeploymentRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.DeploymentStatus status = 2 [(validate.rules).enum.defined_only = true];
    pipe.model.ApplicationDeploymentReference deployment = 3 [(validate.rules).message.required = true];
}

message ReportApplicationMostRecentDeploymentResponse {
}

message GetApplicationMostRecentDeploymentRequest {
    string application_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.DeploymentStatus status = 2 [(validate.rules).enum.defined_only = true];
}

message GetApplicationMostRecentDeploymentResponse {
    pipe.model.ApplicationDeploymentReference deployment = 1 [(validate.rules).message.required = true];
}

message ListNotCompletedDeploymentsRequest {
}

message ListNotCompletedDeploymentsResponse {
    repeated pipe.model.Deployment deployments = 1;
}

message CreateDeploymentRequest {
    pipe.model.Deployment deployment = 1 [(validate.rules).message.required = true];
}

message CreateDeploymentResponse {
}

message ReportDeploymentPlannedRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    // Simple description about what this deployment does.
    // Empty means nothing has changed complared to when the deployment was created.
    string description = 2;
    // The human-readable description why the deployment is at current status.
    string status_description = 3;
    // The planned stages.
    // Empty means nothing has changed complared to when the deployment was created.
    repeated pipe.model.PipelineStage stages = 4;
}

message ReportDeploymentPlannedResponse {
}

message ReportDeploymentStatusChangedRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    // We only accept RUNNING or ROLLING_BACK.
    pipe.model.DeploymentStatus status = 2 [(validate.rules).enum = {in: [2,3]}];
    // The human-readable description why the deployment is at current status.
    string status_description = 3;
}

message ReportDeploymentStatusChangedResponse {
}

message ReportDeploymentCompletedRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    // The status of deployment.
    pipe.model.DeploymentStatus status = 2 [(validate.rules).enum.defined_only = true];
    // The human-readable description why the deployment is at current status.
    string status_description = 3;
    // The completed statuses of all stages.
    map<string,model.StageStatus> stage_statuses = 4;
    // The completion time of deployment.
    int64 completed_at = 13 [(validate.rules).int64.gt = 0];
}

message ReportDeploymentCompletedResponse {
}

message SaveDeploymentMetadataRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    map<string,string> metadata = 2;
}

message SaveDeploymentMetadataResponse {
}

message SaveStageMetadataRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    map<string,string> metadata = 3;
}

message SaveStageMetadataResponse {
}

message ReportStageLogsRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    int32 retried_count = 3;
    repeated pipe.model.LogBlock blocks = 4;
}

message ReportStageLogsResponse {
}

message ReportStageLogsFromLastCheckpointRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    int32 retried_count = 3;
    repeated pipe.model.LogBlock blocks = 4;
    bool completed = 5;
}

message ReportStageLogsFromLastCheckpointResponse {
}

message ReportStageStatusChangedRequest {
    string deployment_id = 1 [(validate.rules).string.min_len = 1];
    string stage_id = 2 [(validate.rules).string.min_len = 1];
    pipe.model.StageStatus status = 3 [(validate.rules).enum.defined_only = true];
    // The human-readable description why the stage is at current status.
    string status_description = 4;
    bool visible = 5;
    int32 retried_count = 6;
    int64 completed_at = 13 [(validate.rules).int64.gt = 0];
}

message ReportStageStatusChangedResponse {
}

message ListUnhandledCommandsRequest {
}

message ListUnhandledCommandsResponse {
    repeated pipe.model.Command commands = 1;
}

message ReportCommandHandledRequest {
    string command_id = 1 [(validate.rules).string.min_len = 1];
    pipe.model.CommandStatus status = 2 [(validate.rules).enum.defined_only = true];
    map<string,string> metadata = 3;
    int64 handled_at = 4 [(validate.rules).int64.gt = 0];
}

message ReportCommandHandledResponse {
}

message ReportApplicationLiveStateRequest {
    pipe.model.ApplicationLiveStateSnapshot snapshot = 1 [(validate.rules).message.required = true];
}

message ReportApplicationLiveStateResponse {
}

message ReportApplicationLiveStateEventsRequest {
    repeated pipe.model.KubernetesResourceStateEvent kubernetes_events = 1;
}

message ReportApplicationLiveStateEventsResponse {
    repeated string failed_ids = 1;
}
